# thunderbird-release-schedule

./: .gitignore  GOOGLE_CALENDAR_SETUP.md  README.md  pyproject.toml  requirements.txt  thunderbird_schedule.py
.github/workflows/: tests.yml
tests/: test_schedule.py
